updated-tests-for-suiting-java-8