@@ -15,6 +15,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -107,7 +108,7 @@ public class ClientServiceTest {
 
         List<ClientGetDto> dtoList = clientService.getAllClients();
 
-        List<ClientGetDto> expectedDtoList = List.of(
+        List<ClientGetDto> expectedDtoList = Arrays.asList(
                 ClientGetDto.builder()
                         .id(1L)
                         .clientName("John Doe")
@@ -149,7 +150,7 @@ public class ClientServiceTest {
     }
 
     private List<Client> mockClientList() {
-        return List.of(
+        return Arrays.asList(
                 Client.builder()
                         .id(1L)
                         .name("John Doe")
